// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Primitives Snapshot Tests Badge Component renders customized badge correctly 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 9999,
        "borderWidth": 1,
        "elevation": 4,
        "paddingHorizontal": 8,
        "paddingVertical": 2,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#FFD70022",
        "borderColor": "#FFD700",
        "shadowColor": "#FFD700",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 11,
          "letterSpacing": 0.4,
        },
        {
          "color": "#0D0F14",
        },
      ]
    }
  >
    PR
  </Text>
</View>
`;

exports[`UI Primitives Snapshot Tests Badge Component renders default badge correctly 1`] = `
<View
  style={
    [
      {
        "alignSelf": "flex-start",
        "borderRadius": 9999,
        "borderWidth": 1,
        "elevation": 4,
        "paddingHorizontal": 8,
        "paddingVertical": 2,
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 6,
      },
      {
        "backgroundColor": "#4F8EF722",
        "borderColor": "#4F8EF7",
        "shadowColor": "#4F8EF7",
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "Inter_600SemiBold",
          "fontSize": 11,
          "letterSpacing": 0.4,
        },
        {
          "color": "#FFFFFF",
        },
      ]
    }
  >
    WORKOUT
  </Text>
</View>
`;

exports[`UI Primitives Snapshot Tests BarChart Component renders bar chart with valid data correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 200,
      },
      {
        "height": 200,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingRight": 8,
        },
        {
          "height": 200,
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
    >
      6
    </Text>
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
    >
      3
    </Text>
    <Text
      style={
        {
          "color": "#4E5A6E",
          "fontSize": 11,
          "lineHeight": 15,
          "textAlign": "right",
          "width": 22,
        }
      }
    >
      0
    </Text>
  </View>
  <View
    style={
      [
        {
          "alignItems": "flex-end",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        {
          "height": 200,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        Mon
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        Tue
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
          "marginHorizontal": 3,
        }
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.015)",
              "borderColor": "rgba(255, 255, 255, 0.04)",
              "borderRadius": 8,
              "borderWidth": 1,
              "flexDirection": "column-reverse",
              "marginBottom": 4,
              "overflow": "hidden",
              "padding": 3,
              "width": "100%",
            },
            {
              "height": 172,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
        <View
          style={
            [
              {
                "borderRadius": 4,
                "overflow": "hidden",
                "position": "relative",
                "width": "100%",
              },
              {
                "height": 24.666666666666668,
                "marginVertical": 1.5,
                "opacity": 0,
                "transform": [
                  {
                    "scale": 0,
                  },
                ],
              },
            ]
          }
        >
          <LinearGradient
            colors={
              [
                "#38BDF8",
                "#4F8EF7",
              ]
            }
            end={
              {
                "x": 0,
                "y": 1,
              }
            }
            start={
              {
                "x": 0,
                "y": 0,
              }
            }
          />
        </View>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#4E5A6E",
            "fontSize": 10,
            "height": 20,
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        Wed
      </Text>
    </View>
  </View>
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders active variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {
        "borderColor": "#4F8EF7",
        "borderWidth": 1.5,
      },
      {
        "padding": 20,
      },
      undefined,
    ]
  }
>
  <View />
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders default variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {},
      {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <View />
</View>
`;

exports[`UI Primitives Snapshot Tests Card Component renders highlight variant card correctly 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#161B24",
        "borderColor": "#252D3A",
        "borderRadius": 16,
        "borderWidth": 1,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.45,
        "shadowRadius": 10,
      },
      {
        "borderLeftColor": "#4F8EF7",
        "borderLeftWidth": 3,
      },
      {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <View />
</View>
`;
